k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-spring-boot-app
  namespace: my-spring-boot-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-spring-boot-app
  template:
    metadata:
      labels:
        app: my-spring-boot-app
    spec:
      containers:
      - name: my-spring-boot-app
        image: koceva2002/my-dockerhub-repo:latest
        ports:
        - containerPort: 8080
