k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-service
  namespace: my-spring-boot-namespace
spec:
  selector:
    app: my-spring-boot-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
